# CPP_Project_Template

./: .gitignore  CMakeLists.txt  DocumentationGuideline.md  Doxyfile  README.md
.github/workflows/: cmake-multi-platform.yml  unit-tests.yml
